--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 .idea/
-models/__pycache__/
+script/models/__pycache__/
 data/
-scratch.py
 .DS_Store
 __pycache__/
 glove*
 vocab.txt
 runs/
 model.bin*
-sample_data.py
+.gitignore
